crates/gridwell-writer-ansi/tests/snapshots/snapshots__footnote-and-source.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m Test       [0m│[1m Result     [0m│
├────────────┼────────────┤
│ A          │ pass1      │
│ B          │ fail       │
└────────────┴────────────┘
  1 Re-run confirmed.
  Source: CI pipeline.
