crates/gridwell-writer-ansi/tests/snapshots/snapshots__footnote-in-stub.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m Country    [0m│[1m GDP        [0m│
├────────────┼────────────┤
│ Atlantis*  │ N/A        │
│ Utopia     │ 999        │
└────────────┴────────────┘
  * Fictional; illustrative only.
