crates/gridwell-writer-ansi/tests/snapshots/snapshots__grand-summary.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m Item       [0m│[1m Amount     [0m│
├────────────┼────────────┤
│ Alpha      │ 10         │
│ Beta       │ 20         │
│ Gamma      │ 30         │
├────────────┼────────────┤
├────────────┼────────────┤
│[1m Total      [0m│[1m 60         [0m│
└────────────┴────────────┘
