crates/gridwell-writer-ansi/tests/snapshots/snapshots__group-summary.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m Item       [0m│[1m Amount     [0m│
├────────────┼────────────┤
│[1m Q1                      [0m│
├────────────┼────────────┤
│ Jan        │ 10         │
│ Feb        │ 20         │
├────────────┼────────────┤
│[1m Subtotal   [0m│[1m 30         [0m│
├────────────┼────────────┤
│[1m Q2                      [0m│
├────────────┼────────────┤
│ Apr        │ 15         │
│ May        │ 25         │
├────────────┼────────────┤
│[1m Subtotal   [0m│[1m 40         [0m│
└────────────┴────────────┘
