crates/gridwell-writer-ansi/tests/snapshots/snapshots__header-only-empty-body.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
[1mEmpty[0m
┌────────────┬────────────┬────────────┐
│[1m A          [0m│[1m B          [0m│[1m C          [0m│
├────────────┼────────────┼────────────┤
└────────────┴────────────┴────────────┘
