crates/gridwell-writer-ansi/tests/snapshots/snapshots__hidden-columns.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m Visible 1  [0m│[1m Visible 2  [0m│
├────────────┼────────────┤
│ a          │ b          │
│ c          │ d          │
└────────────┴────────────┘
