crates/gridwell-writer-ansi/tests/snapshots/snapshots__inline-image.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m Icon       [0m│[1m Label      [0m│
├────────────┼────────────┤
│ logo       │ Brand      │
└────────────┴────────────┘
