crates/gridwell-writer-ansi/tests/snapshots/snapshots__long-word-wrap.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬─────────────────────────────────────────────────────────────────────────┐
│[1m Label      [0m│[1m Token                                                                   [0m│
├────────────┼─────────────────────────────────────────────────────────────────────────┤
│ URL        │ https://example.com/very/long/path/that/should/not/break/nicely?query=1 │
└────────────┴─────────────────────────────────────────────────────────────────────────┘
