crates/gridwell-writer-ansi/tests/snapshots/snapshots__many-row-groups.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m Key        [0m│[1m Value      [0m│
├────────────┼────────────┤
│[1m Group 1                 [0m│
├────────────┼────────────┤
│ k1a        │ 10         │
│ k1b        │ 20         │
├────────────┼────────────┤
│[1m Group 2                 [0m│
├────────────┼────────────┤
│ k2a        │ 20         │
│ k2b        │ 40         │
├────────────┼────────────┤
│[1m Group 3                 [0m│
├────────────┼────────────┤
│ k3a        │ 30         │
│ k3b        │ 60         │
├────────────┼────────────┤
│[1m Group 4                 [0m│
├────────────┼────────────┤
│ k4a        │ 40         │
│ k4b        │ 80         │
├────────────┼────────────┤
│[1m Group 5                 [0m│
├────────────┼────────────┤
│ k5a        │ 50         │
│ k5b        │ 100        │
└────────────┴────────────┘
